--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
 /node_modules
+/public/hot
+/public/storage
+/storage/*.key
 /vendor
 .env
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/Vu
+public/storage/*
+!public/storage/.gitignore
+public/public/*
+!public/public/.gitignore
+public/assets/store_logo/*
+!public/assets/store_logo/.gitignore
+public/assets/payment_receipts/*
+!public/assets/payment_receipts/index.html
+public/assets/sim_card/*
+!public/assets/sim_card/index.html
+public/assets/simcard_offer/*
+!public/assets/simcard_offer/index.html
+public/assets/banners/*
+!public/assets/banners/index.html
+public/assets/temp_xls_file/*
+!public/assets/temp_xls_file/index.html
+public/apk/*
+!public/apk/index.html
+
